// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Renders correctly 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h5
      className="card-title"
    >
      Title
    </h5>
    <p
      className="card-text"
    >
      content
    </p>
  </div>
</div>
`;

exports[`Card Renders correctly with params 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h5
      className="card-title"
    >
      ABCD
    </h5>
    <p
      className="card-text"
    >
      content
    </p>
  </div>
</div>
`;

exports[`Card Renders loader when "isLoading" param is passed 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <div
      className="spinner-border text-primary"
      role="status"
    />
  </div>
</div>
`;
